[tool.poetry]
name = "granian-reprod"
version = "0.1.0"
description = ""
authors = ["Anders Ha <anders@andersha.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# granian = { version = "0.7.3", extras = ["reload"] }
# fastapi = "0.100.0"
# starlette = "0.27.0"

# granian = { version = "0.7.6", extras = ["reload"] }
# fastapi = "0.100.0"
# starlette = "0.27.0"

# granian = { version = "0.7.6", extras = ["reload"] }
# fastapi = "0.108.0"
# starlette = "0.32.0"

# granian = { version = "1.2.0", extras = ["reload"] }
# fastapi = "0.108.0"
# starlette = "0.32.0"

granian = { version = "1.3.2", extras = ["reload"] }
fastapi = "0.111.0"
starlette = "0.37.2"

uvloop = "0.18.0"
anyio = "3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
